styles.css
.navbar-collapse {
    flex-grow: 1;
    flex-basis: 100%;
    display: flex;
    flex-direction: row;
}
.navbar-nav
{
    text-align: center !important;
}
/* Style your active page block */
.navbar-nav .nav-link.active {
    background-color: #454c54 !important; /*Block color */
    color: #ffffff !important;            /* Text color */
}

/* Optional: Add a subtle block color when hovering over inactive links */
.navbar-nav .nav-link:hover:not(.active) {
    background-color: rgba(255, 255, 255, 0.1);
}

/* this is hopefully to stop the white scrollbar to appear on mobile and not break the computer view*/
* {
    box-sizing: border-box;
}

html, body {
    margin: 0;
    padding: 0;
    width: 100%;
    overflow-x: hidden;
}

.pages
{
    /* background-image: linear-gradient(#000000, #3e3e3e, #000000); */
    background-color: #000107;
    background-image:
        radial-gradient(circle at 1px 1px, rgba(113, 246, 92, 0.2) 1px, transparent 0),
        radial-gradient(circle at 1px 1px, rgba(59, 178, 246, 0.18) 1px, transparent 0),
        radial-gradient(circle at 1px 1px, rgba(86, 72, 236, 0.15) 1px, transparent 0);
    background-size: 20px 20px, 30px 30px, 25px 25px;
    background-position: 0 0, 10px 10px, 15px 5px;
}

/*Homepage*/
#homepage
{
    color: white;
    width: 100vw;
    height: 100vh; /* Fallback for older browsers */
    height: 100dvh; /* Dynamic height for modern mobile browsers */
    background-position: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 10px;
    
}
#hp_divider
{
    min-width: 260px;
    width: 50vw;
    height: 3px;
    background-image: linear-gradient(to right, #00000000, #ffffff 40%, #ffffff 60%, #00000000);
    margin-top: 1px;
    margin-bottom: 10px;
}
.btn.hp_button
{
    --bs-btn-font-weight: 700;
}

/*COPYRIGHT ICON*/
#copyright
{
    bottom: 0;
    position: fixed;
    width: 100vw;
    height: 30px;
    background-color: #2B3035;
    display: flex;
    align-items: center;
    justify-content: flex-end;
    z-index: 1000;
}
#copyright_inner
{
    padding-right: 20px;
    color: white;
    font-size: 9px;
    display: flex;
    flex-direction: row;
    gap: 30px;
}
#current_year
{
    display: inline;
}
/*CONTACT POPUP*/
#contact_popup
{
    top: 0;
    left: 0;
    position: fixed;
    width: 100vw;
    height: 100%;
    z-index: 1040;
}
#popup_content
{
    min-width: 200px;
    width: 70vw;
    max-width: 500px;
    height: 60vh;
    min-height: 350px;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: #000000ad;
    position: absolute;
    z-index: 1050;

    font-size: 2cqh;
    text-align: center;
    color: white;
}
#popup_content p
{
    margin-bottom: 4px;
}
#popup_background
{
    position: absolute;
    background-color: #0000008f;
    width: 100vw;
    height: 100vh;
    height: 100dvh;
    z-index: 1040;
}
#popup_content_x
{
    width: 30px;
    height: 30px;
    position: absolute;
    left: 0%;
    top: 0%;
    border-radius: 1%;
}
.center
{
    position: absolute;
    left: 50%;
    transform: translate(-50%);
    width: 80%;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
.center .wide
{
    width: 100%;
}

/*CONTACT PAGE*/
#contact_page
{
    color: white;
    width: 100vw;
    height: 100vh; /* Fallback for older browsers */
    height: 100dvh; /* Dynamic height for modern mobile browsers */
    background-position: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;    
}
.app_icon
{
    height: 100%;
    aspect-ratio: 1 / 1;
}
.contact_apps_links
{
    width: 60%;
    height: 9vw;    
    max-height: 100px;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    margin-bottom: 10px;
}
.contact_email
{
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 20px;
    width: 50%;
    height: 5vh;
    max-height: 40px;
    text-align: center;
    font-size: 1.5cqh;
}

/*ABOUT PAGE*/
#about_page
{
    color: white;
    width: 100%;
    min-height: 100vh;
    height: auto;
    /*
    height: 150vh; Fallback for older browsers
    height: 150dvh; Dynamic height for modern mobile browsers
    */
    background-position: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
#about_content
{
    margin-top: 57px;
    width: 90%;
    height: 90%;
    display: flex;    
    flex-direction: row;
    align-items: flex-start;
    font-size: 1.8cqh;
    background-color: rgba(0, 0, 0, 0.082);
    padding: 5%;
}
#PFP
{
    width: 30%;
    aspect-ratio: 1 / 1;
    max-width: 200px;
}
#about_text
{
    background-color: rgba(91, 91, 91, 0.231);
    width: 90%;
    height: fit-content;
    padding: 10px;
}


/*GAMES PAGE*/
#portfolio_page
{
    color: white;
    width: 100%;
    min-height: 100vh;
    height: auto;
    background-position: center;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
}
#PPHeading
{
    margin-top: 90px;
    display: flex;
    flex-direction: column;
    align-items: center;
}
#PPGames
{
    margin-top: 50px;
    margin-bottom: 50px;
}
.game_capsule
{
    gap: 20px;
    font-size: larger;
    text-decoration: none;
    color: inherit;
    display: flex;    
    flex-direction: column;
    align-items: center;
    background-color: #00000000;
    border-color: #00000000;
}
.capsule_image
{
    width: 200px;
    height: 200px;
    border-radius: 50px;
    transition: transform 0.3s ease; 
}
.capsule_image:hover
{
    transform: scale(1.1); 
}


/*GAME POPUP*/
.Game_Popup
{
    position: absolute;
    top: 0;
    left: 0;
    color: white;
    width: 100%;
    min-height: 100vh;
    height: auto;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    gap: 30px;
    z-index: 10;

    background-color: #000107;
    background-image:
        radial-gradient(circle at 1px 1px, rgba(113, 246, 92, 0.2) 1px, transparent 0),
        radial-gradient(circle at 1px 1px, rgba(59, 178, 246, 0.18) 1px, transparent 0),
        radial-gradient(circle at 1px 1px, rgba(86, 72, 236, 0.15) 1px, transparent 0);
    background-size: 20px 20px, 30px 30px, 25px 25px;
    background-position: 0 0, 10px 10px, 15px 5px;
}
.Game_Popup#Game_Popup1
{
    background-color: #000214;
    background-image:
        radial-gradient(circle at 1px 1px, rgba(92, 246, 246, 0.2) 1px, transparent 0),
        radial-gradient(circle at 1px 1px, rgba(249, 249, 36, 0.18) 1px, transparent 0),
        radial-gradient(circle at 1px 1px, rgba(86, 72, 236, 0.15) 1px, transparent 0);
}
.Game_Popup#Game_Popup2
{
    background-color: #0f0700;
    background-image:
        radial-gradient(circle at 1px 1px, rgba(237, 130, 0, 0.2) 1px, transparent 0),
        radial-gradient(circle at 1px 1px, rgba(246, 243, 59, 0.18) 1px, transparent 0),
        radial-gradient(circle at 1px 1px, rgba(236, 72, 72, 0.15) 1px, transparent 0);
}
.Game_Popup#Game_Popup3
{
    background-color: #100000;
    background-image:
        radial-gradient(circle at 1px 1px, rgba(255, 43, 43, 0.2) 1px, transparent 0),
        radial-gradient(circle at 1px 1px, rgba(246, 234, 59, 0.18) 1px, transparent 0),
        radial-gradient(circle at 1px 1px, rgba(236, 72, 225, 0.15) 1px, transparent 0);
}
.Game_Popup#Game_Popup4
{
    background-color: #010600;
    background-image:
        radial-gradient(circle at 1px 1px, rgba(245, 169, 54, 0.2) 1px, transparent 0),
        radial-gradient(circle at 1px 1px, rgba(90, 246, 59, 0.18) 1px, transparent 0),
        radial-gradient(circle at 1px 1px, rgba(236, 233, 72, 0.15) 1px, transparent 0);
}
.Game_Popup#Game_Popup5
{
    background-color: #030011;
    background-image:
        radial-gradient(circle at 1px 1px, rgba(92, 220, 246, 0.2) 1px, transparent 0),
        radial-gradient(circle at 1px 1px, rgba(224, 59, 246, 0.18) 1px, transparent 0),
        radial-gradient(circle at 1px 1px, rgba(236, 72, 72, 0.15) 1px, transparent 0);
}
.Game_back
{
    position: absolute;
    left: 10px;
    top: 100px;
}
.Game_top
{
    margin-top: 90px;
    display: flex;
    align-items: center;
}
.game_image
{
    width: 200px;
}
.Top_text
{
    display: flex;
    flex-direction: column;
    align-items: center;
}
.game_divider
{
    min-width: 260px;
    width: 50vw;
    height: 3px;
    background-image: linear-gradient(to right, #00000000, #ffffff 40%, #ffffff 60%, #00000000);
}
.Game_about
{
    width: 80%;
    height: auto;
    margin-bottom: 50px;
}
.contribution_images
{
    width: 100%;
    margin: 20px 0px;
    justify-content: center;
    align-items: center;
}
.contribution_image
{
    width: 300px;
}
.contribution_video
{
    width: 80%;
}
.contribution_image.small
{
    width: 200px;
}
.contribution_image.big
{
    width: 360px;
}
.contribution_stuff
{
    height: auto;
    text-align: center;
}


/* ----------------------------------------------
 * Generated by Animista on 2026-6-29 12:24:31
 * Licensed under FreeBSD License.
 * See http://animista.net/license for more info. 
 * w: http://animista.net, t: @cssanimista
 * ---------------------------------------------- */

/**
 * ----------------------------------------
 * animation rotate-br
 * ----------------------------------------
 */
@-webkit-keyframes rotate-in-anim {
  0% {
    -webkit-transform: rotate(0);
            transform: rotate(0);
    -webkit-transform-origin: bottom right;
            transform-origin: bottom right;
  }
  100% {
    -webkit-transform: rotate(110deg);
            transform: rotate(110deg);
    -webkit-transform-origin: bottom right;
            transform-origin: bottom right;
  }
}
@keyframes rotate-in-anim {
  0% {
    -webkit-transform: rotate(0);
            transform: rotate(0);
    -webkit-transform-origin: bottom right;
            transform-origin: bottom right;
  }
  100% {
    -webkit-transform: rotate(110deg);
            transform: rotate(110deg);
    -webkit-transform-origin: bottom right;
            transform-origin: bottom right;
  }
}

@-webkit-keyframes rotate-out-anim {
  0% {
    -webkit-transform: rotate(110deg);
            transform: rotate(110deg);
    -webkit-transform-origin: bottom right;
            transform-origin: bottom right;
  }
  100% {
    -webkit-transform: rotate(0);
            transform: rotate(0);
    -webkit-transform-origin: bottom right;
            transform-origin: bottom right;
  }
}
@keyframes rotate-out-anim {
  0% {
    -webkit-transform: rotate(110deg);
            transform: rotate(110deg);
    -webkit-transform-origin: bottom right;
            transform-origin: bottom right;
  }
  100% {
    -webkit-transform: rotate(0);
            transform: rotate(0);
    -webkit-transform-origin: bottom right;
            transform-origin: bottom right;
  }
}


.rotate-in {
	-webkit-animation: rotate-in-anim 0.5s cubic-bezier(0.455, 0.030, 0.515, 0.955) forwards;
	        animation: rotate-in-anim 0.5s cubic-bezier(0.455, 0.030, 0.515, 0.955) forwards;
}

.rotate-out {
	-webkit-animation: rotate-out-anim 0.5s cubic-bezier(0.455, 0.030, 0.515, 0.955) forwards;
	        animation: rotate-out-anim 0.5s cubic-bezier(0.455, 0.030, 0.515, 0.955) forwards;
}


#game_char
{
    height: 15vw;
    max-height: 100px;
    width: auto;
    position: absolute;
    top: 200px;
    z-index: 999;
}

particle {
  position: fixed;
  left: 0;
  top: 0;
  border-radius: 50%;
  pointer-events: none;
  opacity: 0;
   z-index: 999;
}

